<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_data_of_renovation"
            android:title="@string/data_of_renovation" />
        <item
            android:id="@+id/nav_by_rating"
            android:title="@string/by_rating" />
        <item
            android:id="@+id/nav_by_year_of_production"
            android:title="@string/by_year_of_production" />
        <item
            android:id="@+id/nav_by_popular"
            android:title="@string/by_popular" />
        <item
            android:id="@+id/nav_in_trend"
            android:title="@string/in_trend" />
        <item
            android:id="@+id/nav_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search" />
    </group>
</menu>